# zhc

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  justfile
.github/workflows/: check.yml  fmt.yml  make_release.yml  release.yml  test.yml
doc/: ioplang.typ
hc_bin/: Cargo.toml
hc_bin/src/: main.rs
hc_builder/: Cargo.toml
hc_crypto/: Cargo.toml
hc_crypto/src/: lib.rs
hc_frontend/: Cargo.toml
hc_frontend/src/: builder.rs  pbs.rs  rhai.rs
hc_gui/: Cargo.toml
hc_gui/src/: ext.rs  gui_impl.rs  lib.rs  viewer.rs
hc_ir/: Cargo.toml
hc_ir/src/: annotation.rs  cse.rs  dce.rs  dialect.rs  formatting.rs  id.rs  interpretation.rs  ir.rs  lib.rs  op.rs  op_map.rs  op_mut.rs  op_ref.rs  printer.rs  signature.rs  state.rs  tests.rs  traversal.rs  val.rs  val_map.rs  val_mut.rs  val_origin.rs  val_ref.rs  val_use.rs
hc_langs/: Cargo.toml
hc_pipeline/: Cargo.toml
hc_pipeline/iop/: cmp.rhai  iop
hc_pipeline/src/: allocator.rs  batcher.rs  latency.rs  lib.rs  scheduler.rs  test.rs  translation.rs  translation_table.rs
hc_sim/: Cargo.toml
hc_sim/src/: lib.rs
hc_utils/: Cargo.toml
hc_utils/src/: assert_display.rs  change_guard.rs  fast_hash.rs  lib.rs  store.rs
hc_utils_macro/: Cargo.toml
hc_utils_macro/src/: lib.rs
hpuc_bin/: Cargo.toml
hpuc_builder/: Cargo.toml
hpuc_builder/src/: builder.rs  lib.rs
hpuc_frontend/: Cargo.toml
hpuc_frontend/src/: builder.rs  (+3 more)
hpuc_gui/: Cargo.toml
hpuc_ir/: Cargo.toml
hpuc_langs/: Cargo.toml
hpuc_old/: Cargo.toml
hpuc_pipeline/: Cargo.toml
hpuc_pipeline/bench/: main.rs
hpuc_pipeline/iop/: add.rhai  cmp.rhai  toolbox.rhai
hpuc_pipeline/src/: allocator.rs  batcher.rs  hex.rs  latency.rs  lib.rs  scheduler.rs  test.rs  translation.rs  translation_table.rs
hpuc_sim/: Cargo.toml
hpuc_utils/: Cargo.toml
hpuc_utils_macro/: Cargo.toml
iop/: add.rhai  adder.rhai  cmp.rhai  demo.rhai  sub.rhai  toolbox.rhai
src/: lib.rs  main.rs
zhc/: Cargo.toml
zhc/src/: lib.rs
zhc_builder/: Cargo.toml
zhc_builder/src/: lib.rs  test.rs
zhc_builder/src/builder/: builder.rs  evaluation.rs  integers.rs  mod.rs
zhc_builder/src/iops/: add.rs  bitwise.rs  cmp.rs  count.rs  div.rs  if_then_else.rs  if_then_zero.rs  lead_trail.rs  mh_mul.rs  mod.rs  mul.rs
zhc_crypto/: Cargo.toml
zhc_crypto/src/integer_semantics/: mod.rs  ops.rs  test.rs
zhc_crypto/src/integer_semantics/ciphertext/: ciphertext.rs  spec.rs  test.rs
zhc_crypto/src/integer_semantics/ciphertext_block/: block.rs  mod.rs  spec.rs  test.rs
zhc_crypto/src/integer_semantics/lut/: legacy.rs  lookup.rs  lut.rs  mod.rs  test.rs
zhc_crypto/src/integer_semantics/plaintext/: plaintext.rs  spec.rs  test.rs
zhc_crypto/src/integer_semantics/plaintext_block/: block.rs  spec.rs  test.rs
zhc_ir/: Cargo.toml
zhc_ir/src/: cse.rs  dce.rs  dialect.rs  formatting.rs  id.rs  interpretation.rs  ir.rs  lib.rs  op.rs  op_map.rs  op_mut.rs  op_ref.rs  scheduler.rs  signature.rs  slack.rs  state.rs  testlang.rs  tests.rs  translation.rs  traversal.rs  val.rs  val_map.rs  val_mut.rs  val_origin.rs  val_ref.rs  val_use.rs
zhc_ir/src/annotation/: ir.rs  mod.rs  op_ref.rs  traits.rs  val_origin.rs  val_ref.rs  val_use.rs  view.rs
zhc_ir/src/scheduling/: forward.rs  mod.rs  schedule.rs
zhc_ir/src/visualization/: hierarchy.rs  layer_map.rs  mod.rs  test.rs  visual_annotation.rs
zhc_ir/src/visualization/composition/: annotation.rs  element.rs  mod.rs  model.rs  solution.rs  solver.rs  style.rs  stylesheet.rs
zhc_ir/src/visualization/composition/primitives/: bag.rs  box_dyn.rs  curve.rs  dunions.rs  empty.rs  hstack.rs  inert.rs  mod.rs  optional.rs  spacer.rs  textbox.rs  vfixed.rs  vstack.rs  zfixed.rs
zhc_ir/src/visualization/html/: generation.rs  mod.rs  script.js  style.css  syntax_tree.rs
zhc_ir/src/visualization/layoutlang/: annotate.rs  dialect.rs  generate.rs  instruction_set.rs  mod.rs  type_system.rs
zhc_ir/src/visualization/placement/: annotation.rs  mod.rs  place.rs  solver.rs
zhc_ir/src/visualization/svg/: generation.rs  syntax_tree.rs
zhc_langs/: Cargo.toml
zhc_langs/src/: lib.rs
zhc_langs/src/doplang/: assembly.rs  dialect.rs  instruction_set.rs  interpretation.rs  mod.rs  type_system.rs
zhc_langs/src/hpulang/: batch_statistics.rs  dialect.rs  instruction_set.rs  interpretation.rs  mod.rs  type_system.rs
zhc_langs/src/ioplang/: cut_transfers.rs  dialect.rs  eliminate_aliases.rs  instruction_set.rs  interpretation.rs  isolate_subgraphs.rs  lut.rs  mod.rs  skip_store_load.rs  type_system.rs
zhc_pipeline/: Cargo.toml  output_0.asm  output_1.asm
zhc_pipeline/bench/: bench_broken.rs
zhc_pipeline/src/: allocator.rs  batch_scheduler.rs  batcher.rs  compat.rs  draw_slack.rs  gpu_metrics.rs  hpu_metrics.rs  latency.rs  lib.rs  pbs_metrics.rs  scheduler.rs  test copy.drawio  test.drawio  test.rs  tracing.rs  translation.rs  translation_table.rs
zhc_pipeline/src/allocator/: allocator.rs  batch_map.rs  heap.rs  live_range.rs  mod.rs  register_file.rs  register_state.rs  translator.rs  value_state.rs
zhc_sim/: Cargo.toml
zhc_sim/src/hpu/: dops.rs  isc.rs  latencies.rs  mod.rs  pe_alu.rs  pe_ctl.rs  pe_mem.rs  pe_pbs.rs
zhc_sim/src/hpu/config/: gaussian_44b.toml  mod.rs  tuniform_64b_pfail128_psi64.toml
zhc_sim/src/hpu/test/: legacy.rs  mod.rs
zhc_sim/src/hpu/test/streams/: BW_OR.rs  CMP_GT.rs  DIV.cycles  IF_THEN_ELSE.rs  ILOG2.rs  LEAD0.rs  OVF_MUL.rs  OVF_SUBS.rs  SUBS.rs
zhc_sim/src/simulator/: cycle.rs  simulator.rs  test.rs  tracer.rs  traits.rs  trigger.rs
zhc_utils/: Cargo.toml
zhc_utils/src/: assert_display.rs  bi_map.rs  dump.rs  graphics.rs  lib.rs  misc.rs  safe_as.rs  store.rs
zhc_utils/src/data_visulization/: histogram.rs  mod.rs  plot.rs
zhc_utils/src/iter/: all_eq.rs  average.rs  chunk.rs  collectors.rs  dedup.rs  dedup_by_key.rs  few_mapped.rs  intermediate.rs  mod.rs  mzip.rs  reconcile.rs  separate.rs  window.rs
zhc_utils/src/small/: mod.rs  small_map.rs  small_vec.rs  stack_map.rs  stack_set.rs  varray.rs
zhc_utils_macro/: Cargo.toml
zhc_utils_macro/src/: lib.rs
(+325 files in other folders)
