[workspace]
members = [
    "hc_ir",
    "hc_langs",
    "hc_pipeline",
    "hc_sim",
    "hc_utils",
    "hc_utils_macro",
    "hc_builder",
    "hc_crypto",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
paste = "1.0.15"

# Custom compilation profile
# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false
