[workspace]
members = [
    "zhc",
    "zhc_ir",
    "zhc_langs",
    "zhc_pipeline",
    "zhc_sim",
    "zhc_utils",
    "zhc_utils_macro",
    "zhc_builder",
    "zhc_crypto",
]
resolver = "3"

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/zama-ai/zhc"
readme = "README.md"

[workspace.dependencies]
zhc_ir = { path = "zhc_ir", version = "0.1.8" }
zhc_langs = { path = "zhc_langs", version = "0.1.8" }
zhc_pipeline = { path = "zhc_pipeline", version = "0.1.8" }
zhc_sim = { path = "zhc_sim", version = "0.1.8" }
zhc_utils = { path = "zhc_utils", version = "0.1.8" }
zhc_utils_macro = { path = "zhc_utils_macro", version = "0.1.8" }
zhc_builder = { path = "zhc_builder", version = "0.1.8" }
zhc_crypto = { path = "zhc_crypto", version = "0.1.8" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
paste = "1.0.15"
rand = "0.10.0"
bitfield-struct = "0.10.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"


# Custom compilation profile
# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false
