[package]
name = "hc_bin"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Local dependencies
hc_utils.workspace = true
hc_ir.workspace = true
hc_langs.workspace = true
hc_frontend.workspace = true
hc_gui.workspace = true

# External dependencies
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2.0"
