[package]
name = "hc_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
hc_utils = { path = "../hc_utils" }
hc_ir = { path = "../hc_ir" }
hc_langs = { path = "../hc_langs" }
hc_frontend = { path = "../hc_frontend" }
hc_gui = { path = "../hc_gui" }

clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2.0"
