[package]
name = "hc_pipeline"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Local dependencies
hc_ir.workspace = true
hc_sim.workspace = true
hc_utils.workspace = true
hc_langs.workspace = true
hc_frontend.workspace = true
hc_builder.workspace = true
serde.workspace = true

# External dependencies
bitfield-struct = "0.10.0"
