[package]
name = "hc_pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hc_ir.workspace = true
hc_sim.workspace = true
hc_utils.workspace = true
hc_langs.workspace = true
hc_builder.workspace = true
serde.workspace = true
bitfield-struct.workspace = true
