[package]
name = "zhc"
description = "Hpu code compilation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_ir.workspace = true
zhc_crypto.workspace = true
zhc_sim.workspace = true
zhc_utils.workspace = true
zhc_langs.workspace = true
zhc_builder.workspace = true
zhc_pipeline.workspace = true
