[package]
name = "zhc_builder"
description = "High-level builders for homomorphic integer operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_ir.workspace = true
zhc_utils.workspace = true
zhc_langs.workspace = true
zhc_crypto.workspace = true

[dev-dependencies]
rand.workspace = true
