[package]
name = "zhc_crypto"
description = "Cryptographic primitives for homomorphic encryption"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_utils.workspace = true
paste.workspace = true
rand.workspace = true
