[package]
name = "zhc_langs"
description = "Language dialects for the ZHC compiler (IOP, HOP, DOP)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_ir.workspace = true
zhc_utils.workspace = true
zhc_crypto.workspace = true
serde.workspace = true
