[package]
name = "zhc_pipeline"
description = "Compilation pipeline for HPU code generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_ir.workspace = true
zhc_sim.workspace = true
zhc_utils.workspace = true
zhc_langs.workspace = true
zhc_builder.workspace = true
zhc_crypto.workspace = true
serde.workspace = true
bitfield-struct.workspace = true
rand.workspace = true

[[bin]]
name = "bench_broken"
path = "bench/bench_broken.rs"
