[package]
name = "zhc_sim"
description = "HPU hardware simulation and configuration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_utils.workspace = true
zhc_langs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
