[package]
name = "zhc_utils"
description = "Shared utilities for the ZHC compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zhc_utils_macro.workspace = true
serde.workspace = true
serde_json.workspace = true
paste.workspace = true
